test_regress/t/t_unoptflat_simple_3_bad.out
%Warning-UNOPTFLAT: t/t_unoptflat_simple_3.v:16:14: Signal unoptimizable: Circular combinational logic: 't.x'
   16 |   wire [2:0] x;
      |              ^
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=latest
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    t/t_unoptflat_simple_3.v:16:14:      Example path: t.x
                    t/t_unoptflat_simple_3.v:58:18:      Example path: ASSIGNW
                    t/t_unoptflat_simple_3.v:56:21:      Example path: t.__Vcellout__test1i__xvecout
                    t/t_unoptflat_simple_3.v:21:8:      Example path: ASSIGNW
                    t/t_unoptflat_simple_3.v:16:14:      Example path: t.x
%Error: Exiting due to
